--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/scout": "^9.4",
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.0",
+        "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
